Fix most `@SuppressWarnings`
Former-commit-id: 71f342652d0a0a76a5a892a47c3e5284a57acd59